welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: value i
    if (max1<nums(i)){max1=nums(i)}
                  ^max2Value:5: error: not found: value i
    if (max1<nums(i)){max1=nums(i)}
                                ^max2Value:6: error: not found: value i
    if (max2<max1 && max2<nums(i)){
                               ^max2Value:7: error: not found: value i
      max2 = nums(i)
                  ^max2Value:4: error: type mismatch;
 found   : Unit
 required: Int
  for (j <- 0 to L-1){
         ^